# simple-metaprogramming-library

./: .gitignore  CMakeLists.txt
src/: math.h  type_conditions_and_logic.h  type_list.h
test/: math_test.cpp  math_test.h  type_conditions_and_logic_test.cpp  type_conditions_and_logic_test.h  type_list_test.cpp  type_list_test.h  unit_tests.cpp
